# temporal-memory

./: .env  .gitignore  CLAUDE.md  README.md  config.py  docker-compose.yml  iii-config.yml  logger.py  main.py  model.py  pyproject.toml  schema.py
eval/: quality.py  self_correct.py
functions/: auto_forget.py  claude_bridge.py  common.py  compress.py  consolidate.py  consolidation_pipeline.py  context.py  dedup.py  enrich.py  file_context.py  graph.py  observe.py  privacy.py  remember.py  search.py  smart_search.py  summarize.py  team.py  timeline.py
mcp/: server.py
mcp_tools/: server.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: notification.py  post-tool-failure.py  post-tool-use.py  pre-compact.py  pre-tool-use.py  prompt-submit.py  session-end.py  session-start.py  shared.py  stop.py  subagent-start.py  subagent-stop.py  task-completed.py
prompts/: compression.py  consolidation.py  graph_extraction.py  summary.py
providers/: __init__.py  agent_sdk.py  anthropic.py  circuit_breaker.py  fallback_chain.py  gemini.py  openai.py  openrouter.py  resilient.py
query/: bm25_index.py  hybrid_search.py  index_persistence.py  rerank.py  search.py  stemmer.py  synonym.py  vector_index.py
schema/: __init__.py  base.py  config.py  domain.py
state/: hybrid_search.py  kv.py  schema.py  search.py  search_index.py  stemmer.py  synonym.py  vector_index.py
tests/: test_context.py  test_schema_config.py  test_schema_domain.py  test_search_index.py
triggers/: api.py  router.py  utils.py
viewer/: index.html
(+30 files in other folders)
