[project]
name = "graphmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "claude-agent-sdk>=0.0.1",
    "fastmcp>=3.2.0",
    "google-genai>=1.0.0",
    "iii-sdk>=0.10.0",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "sentence-transformers>=5.3.0",
    "snowballstemmer>=3.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
